removed white space in JS, centered CSS, fixed recipes that were not appending recipe step

--- a/assets/css/recipe.css
+++ b/assets/css/recipe.css
@@ -20,6 +20,7 @@
   text-align: center;
   background-color: rgb(189, 189, 189);
   border: 1 rem solid;
+  border-radius: 10px;
 }
 
 .smallImages {
@@ -28,9 +29,11 @@
 }
 
 .button {
-  margin: 10px;
+   margin: 10px;
   width: 150px;
-  padding: 30px;
+  padding: 25px;
+  border-radius: 10px;
+  color:white; 
 }
 
 #selectRecipes3 {
@@ -87,6 +90,7 @@
     background-size: cover; */
   padding: 10px;
   font-size: 30px;
+  color: white;
 }
 
 .saveButton:hover {
@@ -95,6 +99,7 @@
 
 .priceButton {
   display: inline-block;
+  color: white;
 }
 
 .equipDiv {
@@ -105,6 +110,10 @@
 .test {
   vertical-align: top;
   display: inline-block;
+}
+
+.forEquip2 {
+  border-radius: 10px;
 }
 
 .forEquip1 {
@@ -131,3 +140,52 @@
   background-color: white;
   border-radius: 10px;
 }
+
+.error {
+  
+  background-color: rgb(214, 69, 69);
+  padding: 10px;
+  border-radius: 10px;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.panel1 {
+
+ align-items:center;
+ justify-content: center; 
+ margin: auto;
+ 
+  
+
+}
+.finalPage {
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10%;
+  
+}
+
+.second2 {
+  text-align: center;
+}
+
+.second3 {
+  margin-left: 20%;
+}
+
+/* .grid-container {
+  margin: auto;
+  width: 50%;
+} */
+.stepP {
+  text-align: center;
+}
+
+.mainDiv1 {
+  text-align: center;
+}
+.mainDiv {
+  display: inline-block;
+} 
